# fortress-wasm

./: .gitignore  .npmrc  AGENTS.md  ARCHITECTURE.md  AUDIT.md  AUDIT_FINDINGS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FLOW_MAPPING.md  INTEGRATION_GUIDE.md  LICENSE  PROJECT.md  README.md  RESEARCH.md  SECURITY.md  TEST_INFRA.md  WASM_INTEGRITY.txt  build_obfuscation.py  client.js  comprehensive_test.fvm  comprehensive_test.opcodes.json  comprehensive_test.scrambled.opcodes.json  deny.toml  express.js  fix_u32.py  fix_vm.py  index.js  lkeld-fortress-wasm-1.0.2.tgz  next.js  package-lock.json  package.json  playwright.config.ts  print_str.fvm  print_str.opcodes.json  print_str.scrambled.opcodes.json  telemetry.fvm  telemetry.opcodes.json  test.fvm  test.opcodes.json  (+4 more)
.github/: dependabot.yml
compiler/: package-lock.json  package.json  tsconfig.json
crates/vm-core/: Cargo.toml  build.rs
crates/vm-core/src/: dispatch_table.rs  handlers.rs  lib.rs  opcodes.rs  stack.rs  steg_extract.rs  value.rs  verify_bridge.rs  vm.rs  vm_tests.rs  wrapper.rs
crates/vm-core/src/handlers/: array.rs  comparison.rs  control.rs  json.rs  math.rs  mod.rs  regex.rs  string.rs
crates/vm-core/tests/: integration_test.rs  stress_tests.rs
docs/: cli.md  config.md  frameworks.md  js-transpiler.md  security-model.md  transpiler.md
fuzz/: Cargo.toml
js-runtime/: package-lock.json  package.json
pkg-node/: package.json  vm_core.d.ts  vm_core.js  vm_core_bg.wasm  vm_core_bg.wasm.sha384
pkg-web/: package.json  vm_core.d.ts  vm_core.js  vm_core_bg.js  vm_core_bg.wasm  vm_core_bg.wasm.d.ts  (+1 more)
(+133 files in other folders)
