[package]
name = "vm-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crypto-core = { path = "../crypto-core" }
hmac = "0.12"
sha2 = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
subtle = { version = "2.5.0", default-features = false }
web-sys = { version = "0.3", features = ["Window", "WorkerGlobalScope", "Performance"] }
getrandom = { version = "0.2", features = ["js"] }

x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12"

png = "0.17"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
dev = []
